<resources>
    <string name="app_name">Logic Quiz</string>
    <string name="hint_activity_home">Enter your name...</string>
    <string name="hint_input">Type your answer</string>
    <string name="start">start</string>
    <string name="name">name</string>
    <string name="score">0</string>
    <string name="quiz1_question">Area is a  _______  dimensional measurement.</string>
    <string name="quiz1_one">One</string>
    <string name="quiz1_two">Two</string>
    <string name="quiz1_three">Three</string>
    <string name="done">done</string>
    <string name="quiz2_question">\tWhich of these are Palindrome? (Could be more than one correct answers)</string>
    <string name="a">a.</string>
    <string name="b">b.</string>
    <string name="c">c.</string>
    <string name="d">d.</string>
    <string name="quiz2_a">emu love volume</string>
    <string name="quiz2_b">racecar</string>
    <string name="quiz2_c">revere</string>
    <string name="quiz2_d">go deliver a dare, vile dog</string>
    <string name="solution_header">solution</string>
    <string name="quiz3_question">\t  A mathematician, a physicist, and an engineer walk into a bar. If there are 3 seats available at the bar, how many ways are there for the mathematician, physicist, and engineer to seat themselves?</string>
    <string name="quiz4_question">\t How many different ways can you stack a scoop of chocolate ice cream, a scoop of pistachio ice cream, a scoop of vanilla ice cream, and a scoop of strawberry ice cream onto an ice cream cone?</string>
    <string name="quiz5_question">\t If each country must be colored blue, orange, or green, and countries that share a border must be different colors, how many different ways are there to color Iraq?</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="score_header">Score:</string>
    <string name="slash">/</string>
    <string name="period">.</string>
    <string name="percent">%</string>
    <string name="comma">,</string>
    <string name="message_text">message</string>
    <string name="correct_text">correct:</string>
    <string name="wrong_text">wrong:&#160;&#160;&#160;</string>
    <string name="correct_example">0/5</string>
    <string name="point_text">point</string>
    <string name="point_text_plural">&#160;points</string>
    <string name="total_text">total</string>
    <string name="instruction_header">instruction</string>
    <string name="instruction">1. Every question is worth 3 points\n2. For each incorrect answer, 1 point will be deducted\n3. Checkbox quiz: \n\t-&#160;Each correct choice is worth 1 point\n\t-&#160;For each wrong answer, 1 point deducted </string>
    <string name="close">close</string>
    <string name="name_error">Please enter your name!</string>
    <string name="number_error">Please enter a valid number!</string>
    <string name="player_name_intent_extra">playerName</string>
    <string name="player_score_intent_extra">playerScore</string>
    <string name="correct_message">correct!</string>
    <string name="plus_3_points">+ 3 points</string>
    <string name="wrong_message">wrong!</string>
    <string name="minus_1_point">- 1 point</string>
    <string name="next">next</string>
    <string name="quiz1_solution_part1">Area is a &#160;</string>
    <string name="quiz1_solution_part2">&#160; dimensional measurement.</string>
    <string name="quiz3_solution">This is permutation without repetition 3! = 3 x 2 x 1 = &#160;</string>
    <string name="quiz4_solution">This is permutation without repetition 4! = 4 x 3 x 2 x 1 = &#160;</string>
    <string name="quiz5_solution_part1">There is &#160;</string>
    <string name="quiz5_solution_part2">&#160;ways to color Iraq.</string>
    <string name="point_message">Point:&#160;</string>
    <string name="empty_string"></string>
    <string name="plus_sign">+&#160;</string>
    <string name="minus_sign">-&#160;</string>
    <string name="total_point_text">Total Point:&#160;</string>
</resources>
