<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    android:background="@color/background"
    tools:context="com.example.android.quizapp.Quiz2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Layout"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/container_padding">

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:layout_marginRight="@dimen/dot_seperation"
                    android:src="@drawable/blue_dot" />

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:layout_marginRight="@dimen/dot_seperation"
                    android:src="@drawable/grren_dot" />

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:layout_marginRight="@dimen/dot_seperation"
                    android:src="@drawable/blue_dot" />

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:layout_marginRight="@dimen/dot_seperation"
                    android:src="@drawable/blue_dot" />

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:src="@drawable/blue_dot" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@android:color/white"
                android:gravity="right|center"
                android:orientation="horizontal"
                android:padding="@dimen/container_padding">

                <TextView
                    android:id="@+id/text_view_name"
                    android:paddingRight="@dimen/container_padding"
                    android:text="@string/name"
                    style="@style/TopHeader" />

                <TextView
                    android:id="@+id/text_view_score"
                    android:text="@string/score"
                    style="@style/TopHeader" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/Layout"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="vertical"
            android:padding="@dimen/container_padding">

            <TextView
                style="@style/Question"
                android:text="@string/quiz2_question" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/LabelText"
                    android:layout_marginRight="@dimen/container_margin"
                    android:text="@string/a" />

                <CheckBox
                    android:id="@+id/a_choice"
                    style="@style/AnswersText"
                    android:onClick="activate"
                    android:paddingLeft="@dimen/checkbox_padding"
                    android:text="@string/quiz2_a" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/LabelText"
                    android:layout_marginRight="@dimen/container_margin"
                    android:text="@string/b" />

                <CheckBox
                    android:id="@+id/b_choice"
                    style="@style/AnswersText"
                    android:onClick="activate"
                    android:paddingLeft="@dimen/checkbox_padding"
                    android:text="@string/quiz2_b" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/LabelText"
                    android:layout_marginRight="@dimen/container_margin"
                    android:text="@string/c" />

                <CheckBox
                    android:id="@+id/c_choice"
                    style="@style/AnswersText"
                    android:onClick="activate"
                    android:paddingLeft="@dimen/checkbox_padding"
                    android:text="@string/quiz2_c" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/LabelText"
                    android:layout_marginRight="@dimen/container_margin"
                    android:text="@string/d" />

                <CheckBox
                    android:id="@+id/d_choice"
                    style="@style/AnswersText"
                    android:onClick="activate"
                    android:paddingLeft="@dimen/checkbox_padding"
                    android:text="@string/quiz2_d" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/solution_layout"
            style="@style/Layout"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="vertical"
            android:padding="@dimen/container_padding"
            android:visibility="invisible">

            <TextView
                style="@style/SolutionHeader"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/solution_header" />

            <TextView
                android:id="@+id/solution"
                style="@style/Solution"
                android:layout_marginBottom="@dimen/default_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center">

            <Button
                android:id="@+id/done_button"
                style="@style/CustomButton"
                android:enabled="false"
                android:visibility="invisible"
                android:onClick="done"
                android:text="@string/done" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
