<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toast_layout_root"
    style="@style/ToastLayout"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <ImageView
        android:id="@+id/toast_img"
        style="@style/ToastImage"
        android:src="@drawable/correct" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            style="@style/ToastMessage"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/correct_text" />

        <TextView
            android:id="@+id/toast_correct_number"
            style="@style/ToastMessage"
            android:text="@string/correct_example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/comma"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/toast_correct_point"
            style="@style/ToastMessage"
            android:text="@string/point_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            style="@style/ToastMessage"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/wrong_text" />

        <TextView
            android:id="@+id/toast_incorrect_number"
            style="@style/ToastMessage"
            android:text="@string/correct_example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/comma"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/toast_incorrect_point"
            style="@style/ToastMessage"
            android:text="@string/point_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/toast_total_point"
            style="@style/ToastPointTotal"
            android:text="@string/total_text" />
    </LinearLayout>
</LinearLayout>