<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/container_padding"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:text="@string/instruction_header"
        android:gravity="center"
        android:layout_marginBottom="@dimen/container_margin"
        style="@style/InstructionHeader"/>

    <TextView
        android:padding="@dimen/container_padding"
        android:text="@string/instruction"
        android:layout_marginBottom="@dimen/container_margin"
        style="@style/InstructionContent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/close"
        android:onClick="close"
        android:gravity="center|bottom"
        style="@style/TextViewButton"/>
    </LinearLayout>
</ScrollView>