<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    android:background="@color/background"
    tools:context="com.example.android.quizapp.QuizFinal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Layout"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/container_padding">

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:layout_marginRight="@dimen/dot_seperation"
                    android:src="@drawable/blue_dot" />

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:layout_marginRight="@dimen/dot_seperation"
                    android:src="@drawable/blue_dot" />

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:layout_marginRight="@dimen/dot_seperation"
                    android:src="@drawable/blue_dot" />

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:layout_marginRight="@dimen/dot_seperation"
                    android:src="@drawable/blue_dot" />

                <ImageView
                    android:layout_width="@dimen/dot_square_dimen"
                    android:layout_height="@dimen/dot_square_dimen"
                    android:src="@drawable/grren_dot" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@android:color/white"
                android:gravity="right|center"
                android:orientation="horizontal"
                android:padding="@dimen/container_padding">

                <TextView
                    android:id="@+id/text_view_name"
                    android:paddingRight="@dimen/container_padding"
                    android:text="@string/name"
                    style="@style/TopHeader" />

                <TextView
                    android:id="@+id/text_view_score"
                    android:text="@string/score"
                    style="@style/TopHeader" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/default_margin"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="@dimen/container_padding">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:src="@drawable/map" />

            <TextView
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/quiz5_question"
                style="@style/Question" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/one_choice"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:onClick="radioButtonSelected"
                    android:text="@string/zero"
                    style="@style/AnswersText"/>

                <RadioButton
                    android:id="@+id/two_choice"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:onClick="radioButtonSelected"
                    android:text="@string/one"
                    style="@style/AnswersText"/>

                <RadioButton
                    android:id="@+id/three_choice"
                    android:onClick="radioButtonSelected"
                    android:text="@string/two"
                    style="@style/AnswersText"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/solution_layout"
            style="@style/Layout"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="vertical"
            android:padding="@dimen/container_padding"
            android:visibility="invisible">

            <TextView
                style="@style/SolutionHeader"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/solution_header" />

            <TextView
                android:id="@+id/solution"
                style="@style/Solution"
                android:layout_marginBottom="@dimen/default_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="bottom|center">

            <Button
                android:id="@+id/done_button"
                android:enabled="false"
                android:visibility="invisible"
                android:onClick="done"
                android:text="@string/done"
                style="@style/CustomButton"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
