<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context="com.example.android.quizapp.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:src="@drawable/quiz" />

            <TextView
                style="@style/LogicQuizTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Logic Quiz" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="clip_vertical"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <EditText
                android:id="@+id/field_name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_activity_home" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button_instruction"
                    style="@style/TextViewButton"
                    android:onClick="openInstruction"
                    android:text="@string/instruction_header" />

                <TextView
                    android:id="@+id/button_start"
                    style="@style/TextViewButton"
                    android:onClick="start"
                    android:text="@string/start" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>